--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -9,13 +9,19 @@
 }
 
 body {
-  font-size: 16px;
-  margin: 0;
+  color: $black;
   font-family: 'Poppins', sans-serif;
+  font-size: 16px;
   font-weight: normal;
+  margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
 }
 
@@ -24,4 +30,19 @@ button {
   font-family: inherit;
   font-size: inherit;
   // border: 0; // @TODO: стоит ли убирать?
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+
+  &:hover {
+    color: $orange;
+    text-decoration: none;
+  }
 }
