--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -19,13 +19,19 @@
 }
 
 body {
-  font-size: 16px;
-  margin: 0;
+  color: #323232;
   font-family: "Poppins", sans-serif;
+  font-size: 16px;
   font-weight: normal;
+  margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
 }
 
@@ -33,4 +39,58 @@ input,
 button {
   font-family: inherit;
   font-size: inherit;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: #f78434;
+  text-decoration: none;
+}
+
+.header__container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.header__body {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 33px;
+  padding-top: 40px;
+}
+.header__logo {
+  display: flex;
+  align-items: center;
+}
+.header__title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 12px;
+}
+.header__list {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  gap: 42px;
+}
+.header__link {
+  display: block;
+}
+.header__link:hover {
+  transform: scale(1.05);
+}
+.header__link--active {
+  color: #f78434;
+  transform: scale(1.05);
 }
