--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -13,6 +13,8 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: normal;
+  letter-spacing: 1.15px;
+  line-height: 1.69;
   margin: 0;
 }
 
@@ -23,6 +25,14 @@ h4,
 h5,
 h6 {
   font-weight: bold;
+  letter-spacing: 0.8px;
+  line-height: 1.48;
+  margin-top: 0;
+}
+
+h1 {
+  font-size: 54px;
+  line-height: 1.46;
 }
 
 input,
@@ -45,4 +55,13 @@ a {
     color: $orange;
     text-decoration: none;
   }
+}
+
+figure {
+  margin: 0;
+}
+
+img,
+svg {
+  vertical-align: middle;
 }
