--- a/styles/scss/blocks/_header.scss
+++ b/styles/scss/blocks/_header.scss
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 33px;
-    padding-top: 40px;
+    padding-top: 37px;
+    letter-spacing: normal;
   }
 
   &__logo {
@@ -33,7 +34,6 @@
 
     &:hover {
       transform: scale(1.05);
-      // @TODO: может быть для --актив прописать таки bold ... посмотреть потом как будет выглядеть
     }
 
     &--active {
