--- a/styles/scss/blocks/_intro.scss
+++ b/styles/scss/blocks/_intro.scss
@@ -20,13 +20,13 @@
   }
 
   &__subtitle {
-    margin-bottom: 42px;
+    margin-bottom: 44px;
   }
 
   &__picture {
     border-radius: 40px 40px 40px 0px;
     overflow: hidden;
-    flex: 0 0 540px;
+    // flex: 0 0 540px;
   }
 
   &__image {
