--- a/styles/scss/blocks/_intro-form.scss
+++ b/styles/scss/blocks/_intro-form.scss
@@ -17,8 +17,13 @@
   }
 
   &__input {
-    @include input;
+    border: 0;
+    color: $black;
     max-width: 210px;
+
+    &:focus {
+      outline: none;
+    }
 
     &::placeholder {
       color: #bbbbbb;
@@ -26,7 +31,6 @@
   }
 
   &__button {
-    @include button-primary;
     margin-left: auto;
   }
 }
