--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'layout/header';
 
 // blocks
+@import 'blocks/page';
 @import 'blocks/intro';
 @import 'blocks/intro-form';
 @import 'blocks/partners';
