Добавлен блок provide

--- a/styles/scss/blocks/_intro.scss
+++ b/styles/scss/blocks/_intro.scss
@@ -22,11 +22,9 @@
   &__picture {
     border-radius: 40px 40px 40px 0px;
     overflow: hidden;
-    // flex: 0 0 540px;
   }
 
   &__image {
-    max-width: 100%;
-    height: auto;
+    @include image;
   }
 }
