--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -18,3 +18,5 @@
 @import 'blocks/intro';
 @import 'blocks/intro-form';
 @import 'blocks/partners';
+@import 'blocks/provide';
+@import 'blocks/provide-hint';
