--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -41,6 +41,14 @@ h1 {
   line-height: 1.46;
 }
 
+h2 {
+  font-size: 42px;
+}
+
+h6 {
+  font-size: inherit;
+}
+
 input,
 button {
   font-family: inherit;
@@ -59,6 +67,13 @@ a {
 a:hover {
   color: #f78434;
   text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+p + p {
+  margin-top: 20px;
 }
 
 figure {
@@ -83,12 +98,15 @@ svg {
   border-radius: 30px;
   border: none;
   cursor: pointer;
+  display: inline-block;
   font-weight: bold;
+  letter-spacing: normal;
   padding: 17px 37px;
   transition: background-color 200ms ease;
 }
 .button:hover {
   background-color: #f78434;
+  color: #fff;
 }
 .button:focus {
   box-shadow: 0 0 15px #f78434;
@@ -208,4 +226,81 @@ svg {
   align-items: center;
   display: flex;
   justify-content: space-between;
+}
+
+.provide__body {
+  display: flex;
+}
+.provide__gallery {
+  display: flex;
+  gap: 33px;
+  left: -237px;
+  position: relative;
+}
+.provide__card {
+  position: relative;
+}
+.provide__picture {
+  border-radius: 20px;
+  cursor: pointer;
+  overflow: hidden;
+  width: 385px;
+}
+.provide__picture--sharp {
+  border-bottom-right-radius: 0;
+}
+.provide__image {
+  max-width: 100%;
+  height: auto;
+}
+.provide__hint {
+  bottom: 87px;
+  opacity: 0;
+  position: absolute;
+  right: -46px;
+  transition: 250ms ease;
+  visibility: hidden;
+  z-index: 20;
+}
+.provide__card:hover .provide__hint {
+  opacity: 1;
+  visibility: visible;
+}
+.provide__content {
+  flex-shrink: 0;
+  margin-left: -55px;
+  padding-top: 68px;
+  width: 374px;
+}
+.provide__title {
+  margin-bottom: 20px;
+}
+.provide__button {
+  margin-top: 40px;
+}
+
+.provide-hint {
+  align-items: center;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 4px 20px 42px -2px rgba(0, 0, 0, 0.12);
+  display: flex;
+  padding: 32px 29px;
+  width: 300px;
+}
+.provide-hint__title {
+  margin-bottom: 0;
+}
+.provide-hint__icon {
+  align-items: center;
+  background-color: rgba(88, 190, 191, 0.2);
+  border-radius: 50%;
+  display: flex;
+  flex-shrink: 0;
+  height: 45px;
+  justify-content: center;
+  width: 45px;
+}
+.provide-hint__content {
+  margin-left: 20px;
 }
