--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -31,6 +31,14 @@ h1 {
   line-height: 1.46;
 }
 
+h2 {
+  font-size: 42px;
+}
+
+h6 {
+  font-size: inherit;
+}
+
 input,
 button {
   font-family: inherit;
@@ -49,6 +57,14 @@ a {
   &:hover {
     color: $orange;
     text-decoration: none;
+  }
+}
+
+p {
+  margin: 0;
+
+  & + & {
+    margin-top: 20px;
   }
 }
 
