Добавлен блок using

--- a/styles/scss/blocks/_page.scss
+++ b/styles/scss/blocks/_page.scss
@@ -6,4 +6,12 @@
   &__partners {
     margin-bottom: 90px;
   }
+
+  &__provide {
+    margin-bottom: 154px;
+  }
+
+  &__using {
+    margin-bottom: 144px;
+  }
 }
