--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -95,6 +95,7 @@ svg {
 
 .button {
   background-color: #fff;
+  color: #323232;
   border-radius: 30px;
   border: none;
   cursor: pointer;
@@ -102,6 +103,7 @@ svg {
   font-weight: bold;
   letter-spacing: normal;
   padding: 17px 37px;
+  text-align: center;
   transition: background-color 200ms ease;
 }
 .button:hover {
@@ -159,6 +161,12 @@ svg {
 }
 .page__partners {
   margin-bottom: 90px;
+}
+.page__provide {
+  margin-bottom: 154px;
+}
+.page__using {
+  margin-bottom: 144px;
 }
 
 .intro__body {
@@ -303,4 +311,50 @@ svg {
 }
 .provide-hint__content {
   margin-left: 20px;
+}
+
+.using__body {
+  background: url("../../../assets/images/bg/circle-group.svg") no-repeat top right, url("../../../assets/images/bg/quarter.svg") no-repeat 46% 100%, #58bebf;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 91px 95px;
+  position: relative;
+}
+.using__picture {
+  background-color: #fff;
+  border-top-right-radius: 21px;
+  bottom: 0;
+  left: 0;
+  padding-right: 25px;
+  padding-top: 25px;
+  position: absolute;
+}
+.using__content {
+  color: #fff;
+  margin-left: auto;
+  width: 364px;
+}
+.using__title {
+  margin-bottom: 15px;
+}
+.using__action {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+}
+.using__action .button {
+  width: 172px;
+}
+.using__play-button {
+  padding-left: 29px;
+  padding-right: 29px;
+  white-space: nowrap;
+}
+.using__play-icon {
+  fill: #f78434;
+  margin-right: 5px;
+  transition: fill 200ms ease;
+}
+.using__play-button:hover .using__play-icon {
+  fill: #fff;
 }
