--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -21,3 +21,5 @@
 @import 'blocks/provide';
 @import 'blocks/provide-hint';
 @import 'blocks/using';
+@import 'blocks/serve';
+@import 'blocks/serve-card';
