--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -196,8 +196,11 @@ svg {
 }
 
 .intro-form {
+  align-items: center;
   border-radius: 30px;
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
+  display: flex;
+  justify-content: space-between;
   transition: box-shadow 200ms ease-in;
   width: 459px;
 }
@@ -205,15 +208,12 @@ svg {
   box-shadow: 0px 17px 42px rgba(247, 132, 52, 0.32);
 }
 .intro-form__label {
-  align-items: center;
-  display: flex;
-  gap: 20px;
-  max-width: 100%;
   padding-left: 28px;
 }
 .intro-form__input {
   border: 0;
   color: #323232;
+  margin-left: 10px;
   max-width: 210px;
 }
 .intro-form__input:focus {
@@ -224,9 +224,6 @@ svg {
 }
 .intro-form__input::placeholder {
   color: #bbbbbb;
-}
-.intro-form__button {
-  margin-left: auto;
 }
 
 .partners__list {
