--- a/styles/scss/blocks/_intro-form.scss
+++ b/styles/scss/blocks/_intro-form.scss
@@ -1,6 +1,9 @@
 .intro-form {
+  align-items: center;
   border-radius: 30px;
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
+  display: flex;
+  justify-content: space-between;
   transition: box-shadow 200ms ease-in;
   width: 459px;
 
@@ -9,16 +12,13 @@
   }
 
   &__label {
-    align-items: center;
-    display: flex;
-    gap: 20px;
-    max-width: 100%;
     padding-left: 28px;
   }
 
   &__input {
     border: 0;
     color: $black;
+    margin-left: 10px;
     max-width: 210px;
 
     &:focus {
@@ -28,9 +28,5 @@
     &::placeholder {
       color: #bbbbbb;
     }
-  }
-
-  &__button {
-    margin-left: auto;
   }
 }
