--- a/styles/scss/components/_button.scss
+++ b/styles/scss/components/_button.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: #fff;
+  background-color: $white;
   color: $black;
   border-radius: 30px;
   border: none;
@@ -9,11 +9,11 @@
   letter-spacing: normal;
   padding: 17px 37px;
   text-align: center;
-  transition: background-color 200ms ease;
+  transition: background-color $base-duration ease;
 
   &:hover {
     background-color: $orange;
-    color: #fff;
+    color: $white;
   }
 
   &:focus {
@@ -23,7 +23,7 @@
 
   &--accented {
     background-color: $orange;
-    color: #fff;
+    color: $white;
 
     &:hover {
       background-color: $orange-dark;
