--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -201,7 +201,7 @@ svg {
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
   display: flex;
   justify-content: space-between;
-  transition: box-shadow 200ms ease-in;
+  transition: box-shadow 200ms ease;
   width: 459px;
 }
 .intro-form--active {
