--- a/styles/scss/blocks/_intro-form.scss
+++ b/styles/scss/blocks/_intro-form.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
   display: flex;
   justify-content: space-between;
-  transition: box-shadow 200ms ease-in;
+  transition: box-shadow $base-duration ease;
   width: 459px;
 
   &--active {
