--- a/styles/scss/blocks/_provide-hint.scss
+++ b/styles/scss/blocks/_provide-hint.scss
@@ -1,6 +1,6 @@
 .provide-hint {
   align-items: center;
-  background-color: #fff;
+  background-color: $white;
   border-radius: 15px;
   box-shadow: 4px 20px 42px -2px rgba(0, 0, 0, 0.12);
   display: flex;
