--- a/styles/scss/blocks/_provide.scss
+++ b/styles/scss/blocks/_provide.scss
@@ -34,7 +34,7 @@
     opacity: 0;
     position: absolute;
     right: -46px;
-    transition: 200ms ease;
+    transition: $base-duration ease;
     visibility: hidden;
     z-index: 20;
 
