--- a/styles/scss/helpers/_variables.scss
+++ b/styles/scss/helpers/_variables.scss
@@ -1,7 +1,11 @@
 // Colors
 
-$black: #323232;
+$white: #fff;
 $grey: #f5f6fa;
+$black: #323232;
 $orange: #f78434;
 $orange-dark: #ef7219;
 $aqua: #58bebf;
+
+// animations
+$base-duration: 200ms;
