--- a/styles/scss/blocks/_page.scss
+++ b/styles/scss/blocks/_page.scss
@@ -14,4 +14,12 @@
   &__using {
     margin-bottom: 144px;
   }
+
+  &__serve {
+    margin-bottom: 113px;
+  }
+
+  &__choose {
+    margin-bottom: 112px;
+  }
 }
