--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -23,3 +23,5 @@
 @import 'blocks/using';
 @import 'blocks/serve';
 @import 'blocks/serve-card';
+@import 'blocks/choose';
+@import 'blocks/choose-item';
