--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -25,3 +25,5 @@
 @import 'blocks/serve-card';
 @import 'blocks/choose';
 @import 'blocks/choose-item';
+@import 'blocks/words';
+@import 'blocks/words-item';
