--- a/styles/scss/components/_container.scss
+++ b/styles/scss/components/_container.scss
@@ -1,7 +1,13 @@
 .container {
+  $padding: 15px;
+  box-sizing: content-box;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1140px; // 1110 (по макету) + 30 (два паддинга по 15)
-  padding-left: 15px; // чтобы в мобайле не прилипал к краям
-  padding-right: 15px;
+  max-width: 1110px;
+  padding-left: $padding; // чтобы в мобайле не прилипал к краям
+  padding-right: $padding;
+
+  &--wide {
+    max-width: 1150px;
+  }
 }
