--- a/styles/scss/helpers/_variables.scss
+++ b/styles/scss/helpers/_variables.scss
@@ -1,8 +1,11 @@
 // Colors
 
 $white: #fff;
-$grey: #f5f6fa;
 $black: #323232;
+
+$grey: #f5f6fa;
+$grey-dark: #606060;
+
 $orange: #f78434;
 $orange-dark: #ef7219;
 $aqua: #58bebf;
