--- a/styles/scss/blocks/_page.scss
+++ b/styles/scss/blocks/_page.scss
@@ -4,7 +4,7 @@
   }
 
   &__partners {
-    margin-bottom: 90px;
+    margin-bottom: 91px;
   }
 
   &__provide {
@@ -21,5 +21,9 @@
 
   &__choose {
     margin-bottom: 110px;
+  }
+
+  &__words {
+    margin-bottom: 40px;
   }
 }
