--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -12,6 +12,7 @@ body {
   letter-spacing: 1.15px;
   line-height: 1.69;
   margin: 0;
+  min-width: 1440px; // @TODO: заменить, когда будет готов адаптив
 }
 
 h1,
