--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -9,9 +9,12 @@
 // components
 @import 'components/container';
 @import 'components/button';
+@import 'components/logo';
 
 // layout
 @import 'layout/header';
+@import 'layout/footer';
+@import 'layout/footer-unit';
 
 // blocks
 @import 'blocks/page';
