--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -52,6 +52,11 @@ h4 {
   letter-spacing: 0.5px;
 }
 
+h5 {
+  font-size: 21px;
+  letter-spacing: 0.5px;
+}
+
 h6 {
   font-size: inherit;
 }
@@ -70,6 +75,7 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+  transition: color 200ms ease;
 }
 a:hover {
   color: #f78434;
@@ -140,6 +146,16 @@ svg {
   box-shadow: 0 0 15px #fff;
 }
 
+.logo {
+  align-items: center;
+  display: flex;
+}
+.logo__title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 12px;
+}
+
 .header__body {
   align-items: center;
   display: flex;
@@ -147,15 +163,6 @@ svg {
   padding-bottom: 33px;
   padding-top: 37px;
   letter-spacing: normal;
-}
-.header__logo {
-  display: flex;
-  align-items: center;
-}
-.header__title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-left: 12px;
 }
 .header__list {
   list-style: none;
@@ -172,6 +179,56 @@ svg {
 .header__link--active {
   color: #f78434;
   transform: scale(1.05);
+}
+
+.footer__body {
+  -moz-column-gap: 218px;
+       column-gap: 218px;
+  display: grid;
+  grid-template-columns: 306px 1fr;
+  padding-bottom: 82px;
+  padding-top: 89px;
+}
+.footer__logo {
+  letter-spacing: normal;
+  margin-bottom: 15px;
+}
+.footer__social {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 30px;
+  margin-top: 36px;
+}
+.footer__icon {
+  display: block;
+  transform: scale(1);
+  transition: transform 100ms ease;
+}
+.footer__icon:hover {
+  transform: scale(1.2);
+}
+.footer__list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 85px;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+
+.footer-unit__title {
+  margin-bottom: 18px;
+}
+.footer-unit__list {
+  list-style: none;
+  padding: 0;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  line-height: 1.93;
+}
+.footer-unit__item + .footer-unit__item {
+  margin-top: 13px;
 }
 
 .page__intro {
@@ -193,7 +250,7 @@ svg {
   margin-bottom: 110px;
 }
 .page__words {
-  margin-bottom: 40px;
+  margin-bottom: -3px;
 }
 
 .intro__body {
@@ -598,12 +655,12 @@ svg {
 
 .experience {
   background: url("../../assets/images/bg/slope.svg") no-repeat bottom;
+  background-size: 100%;
 }
 .experience__body {
   align-items: flex-end;
   display: flex;
   gap: 175px;
-  height: 505px;
 }
 .experience__picture {
   position: relative;
