--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -13,11 +13,11 @@
 
 // layout
 @import 'layout/header';
+@import 'layout/main';
 @import 'layout/footer';
 @import 'layout/footer-unit';
 
 // blocks
-@import 'blocks/page';
 @import 'blocks/intro';
 @import 'blocks/intro-form';
 @import 'blocks/partners';
