Рефакторинг: исправлены ошибки, убраны классы

--- a/styles/scss/blocks/_using.scss
+++ b/styles/scss/blocks/_using.scss
@@ -1,7 +1,7 @@
 .using {
   &__body {
-    background: url('../../../assets/images/bg/circle-group.svg') no-repeat top right,
-      url('../../../assets/images/bg/quarter.svg') no-repeat 46% 100%, $aqua;
+    background: url('../../assets/images/bg/circle-group.svg') no-repeat top right,
+      url('../../assets/images/bg/quarter.svg') no-repeat 46% 100%, $aqua;
     border-radius: 20px;
     overflow: hidden;
     padding: 91px 95px;
