--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -395,7 +395,7 @@ svg {
 }
 
 .using__body {
-  background: url("../../../assets/images/bg/circle-group.svg") no-repeat top right, url("../../../assets/images/bg/quarter.svg") no-repeat 46% 100%, #58bebf;
+  background: url("../../assets/images/bg/circle-group.svg") no-repeat top right, url("../../assets/images/bg/quarter.svg") no-repeat 46% 100%, #58bebf;
   border-radius: 20px;
   overflow: hidden;
   padding: 91px 95px;
@@ -575,7 +575,7 @@ svg {
   top: -40px;
 }
 
-.words-item__body {
+.words-item {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -583,7 +583,7 @@ svg {
   overflow: hidden;
   transition: filter 200ms ease;
 }
-.words-item__body:hover {
+.words-item:hover {
   box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
 }
 .words-item__media {
@@ -631,7 +631,7 @@ svg {
   padding: 31px 29px;
   flex-grow: 1;
 }
-.words-item__body:hover .words-item__content {
+.words-item:hover .words-item__content {
   color: initial;
 }
 .words-item__text {
@@ -649,7 +649,7 @@ svg {
   color: #58bebf;
   transition: 200ms ease;
 }
-.words-item__body:hover .words-item__place {
+.words-item:hover .words-item__place {
   color: #f78434;
 }
 
