--- a/styles/scss/blocks/_words-item.scss
+++ b/styles/scss/blocks/_words-item.scss
@@ -1,15 +1,13 @@
 .words-item {
-  &__body {
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow: hidden;
-    transition: filter $base-duration ease;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  transition: filter $base-duration ease;
 
-    &:hover {
-      box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
-    }
+  &:hover {
+    box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
   }
 
   &__media {
@@ -56,7 +54,7 @@
     padding: 31px 29px;
     flex-grow: 1;
 
-    .words-item__body:hover & {
+    .words-item:hover & {
       color: initial;
     }
   }
@@ -79,7 +77,7 @@
     color: $aqua;
     transition: $base-duration ease;
 
-    .words-item__body:hover & {
+    .words-item:hover & {
       color: $orange;
     }
   }
