--- a/styles/scss/blocks/_intro-form.scss
+++ b/styles/scss/blocks/_intro-form.scss
@@ -2,8 +2,8 @@
   align-items: center;
   border-radius: 30px;
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto;
   transition: box-shadow $base-duration ease;
   width: 459px;
 
@@ -12,13 +12,16 @@
   }
 
   &__label {
+    align-items: center;
+    display: flex;
+    height: 100%;
     padding-left: 28px;
   }
 
   &__input {
     border: 0;
     color: $black;
-    margin-left: 10px;
+    margin-left: 16px;
     max-width: 210px;
 
     &:focus {
