--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -22,7 +22,6 @@ body {
   letter-spacing: 1.15px;
   line-height: 1.69;
   margin: 0;
-  min-width: 1440px;
 }
 
 h1,
@@ -99,12 +98,15 @@ svg {
 }
 
 .container {
-  box-sizing: content-box;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1110px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
+  width: 100%;
+}
+@media (min-width: 1220px) {
+  .container {
+    box-sizing: content-box;
+    margin: 0 auto;
+    max-width: 1110px;
+  }
 }
 .container--wide {
   max-width: 1150px;
@@ -160,18 +162,106 @@ svg {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  letter-spacing: normal;
   padding-bottom: 33px;
   padding-top: 37px;
-  letter-spacing: normal;
+  position: relative;
+}
+.header__checkbox {
+  display: none;
+}
+.header__toggler {
+  box-sizing: content-box;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 26px;
+  justify-content: space-between;
+  padding: 15px;
+  position: absolute;
+  right: 10px;
+  top: 29px;
+  width: 33px;
+  z-index: 999;
+}
+@media (min-width: 768px) {
+  .header__toggler {
+    display: none;
+  }
+}
+.header__line {
+  background-color: #323232;
+  border-radius: 10px;
+  display: block;
+  height: 4px;
+  width: 100%;
+}
+.header__line--1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+.header__checkbox:checked ~ .header__toggler .header__line--1 {
+  transform: rotate(45deg);
+}
+.header__line--2 {
+  transition: transform 0.2s ease-in-out;
+}
+.header__checkbox:checked ~ .header__toggler .header__line--2 {
+  transform: scaleY(0);
+}
+.header__line--3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+.header__checkbox:checked ~ .header__toggler .header__line--3 {
+  transform: rotate(-45deg);
+}
+.header__nav {
+  display: none;
+}
+@media (max-width: 767px) {
+  .header__checkbox:checked ~ .header__nav {
+    align-items: center;
+    background-color: #fff;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    padding: 60px 30px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 100;
+  }
+}
+@media (min-width: 768px) {
+  .header__nav {
+    display: block;
+  }
 }
 .header__list {
   list-style: none;
   padding: 0;
-  display: flex;
-  gap: 42px;
+}
+@media (min-width: 768px) {
+  .header__list {
+    display: flex;
+    gap: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .header__list {
+    gap: 42px;
+  }
+}
+@media (max-width: 767px) {
+  .header__item + .header__item {
+    margin-top: 20px;
+  }
 }
 .header__link {
   display: block;
+  text-align: center;
 }
 .header__link:hover {
   transform: scale(1.05);
@@ -179,6 +269,11 @@ svg {
 .header__link--active {
   color: #f78434;
   transform: scale(1.05);
+}
+@media (min-width: 768px) {
+  .header__link {
+    text-align: initial;
+  }
 }
 
 .main__intro {
