--- a/styles/scss/components/_container.scss
+++ b/styles/scss/components/_container.scss
@@ -1,11 +1,12 @@
 .container {
-  $padding: 15px;
-  box-sizing: content-box;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1110px;
-  padding-left: $padding; // чтобы в мобайле не прилипал к краям
-  padding-right: $padding;
+  padding: 0 15px;
+  width: 100%;
+
+  @media (min-width: 1220px) {
+    box-sizing: content-box;
+    margin: 0 auto;
+    max-width: 1110px;
+  }
 
   &--wide {
     max-width: 1150px;
