--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -27,8 +27,12 @@ h6 {
 }
 
 h1 {
-  font-size: 54px;
+  font-size: 44px;
   line-height: 1.46;
+
+  @media (min-width: 576px) {
+    font-size: 54px;
+  }
 }
 
 h2,
