--- a/styles/scss/blocks/_intro-form.scss
+++ b/styles/scss/blocks/_intro-form.scss
@@ -1,21 +1,18 @@
 .intro-form {
-  align-items: center;
-  border-radius: 30px;
-  box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
-  display: grid;
-  grid-template-columns: 1fr auto;
-  transition: box-shadow $base-duration ease;
-  width: 459px;
-
-  &--active {
-    box-shadow: 0px 17px 42px rgba($orange, 0.32);
+  @media (min-width: 992px) {
+    align-items: center;
+    border-radius: 30px;
+    box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
+    display: grid;
+    grid-template-columns: 1fr auto;
+    transition: box-shadow $base-duration ease;
+    width: 459px;
   }
 
-  &__label {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    padding-left: 28px;
+  &--active {
+    @media (min-width: 992px) {
+      box-shadow: 0px 17px 42px rgba($orange, 0.32);
+    }
   }
 
   &__input {
@@ -30,6 +27,36 @@
 
     &::placeholder {
       color: #bbbbbb;
+    }
+  }
+
+  &__label {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    padding-left: 28px;
+    width: 100%;
+
+    @media (max-width: 991px) {
+      border-radius: 30px;
+      box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
+      min-height: 58px;
+    }
+
+    .intro-form--active & {
+      @media (max-width: 991px) {
+        box-shadow: 0px 17px 42px rgba($orange, 0.32);
+      }
+    }
+  }
+
+  &__button {
+    margin-top: 40px;
+    width: 100%;
+
+    @media (min-width: 992px) {
+      margin-top: 0;
+      width: auto;
     }
   }
 }
