--- a/styles/scss/blocks/_intro.scss
+++ b/styles/scss/blocks/_intro.scss
@@ -1,18 +1,34 @@
 .intro {
   &__body {
-    display: grid;
-    grid-template-columns: 1fr 540px;
+    @media (min-width: 992px) {
+      display: grid;
+      grid-template-columns: 1fr 400px;
+    }
+
+    @media (min-width: 1220px) {
+      grid-template-columns: 1fr 540px;
+    }
   }
 
   &__content {
-    padding-top: 127px;
-    padding-right: 103px;
+    @media (min-width: 992px) {
+      padding-top: 60px;
+      padding-right: 85px;
+    }
+
+    @media (min-width: 1220px) {
+      padding-top: 127px;
+      padding-right: 103px;
+    }
   }
 
   &__title {
     margin-bottom: 25px;
-    margin-right: -170px;
-    position: relative;
+
+    @media (min-width: 992px) {
+      margin-right: -170px;
+      position: relative;
+    }
   }
 
   &__subtitle {
@@ -20,8 +36,13 @@
   }
 
   &__picture {
-    border-radius: 40px 40px 40px 0px;
-    overflow: hidden;
+    display: none;
+
+    @media (min-width: 992px) {
+      display: block;
+      border-radius: 40px 40px 40px 0px;
+      overflow: hidden;
+    }
   }
 
   &__image {
