--- a/styles/scss/components/_container.scss
+++ b/styles/scss/components/_container.scss
@@ -2,9 +2,14 @@
   padding: 0 15px;
   width: 100%;
 
-  @media (min-width: 1220px) {
+  @media (min-width: 992px) {
     box-sizing: content-box;
     margin: 0 auto;
+    max-width: 962px;
+    width: auto;
+  }
+
+  @media (min-width: 1220px) {
     max-width: 1110px;
   }
 
