--- a/styles/scss/blocks/_using.scss
+++ b/styles/scss/blocks/_using.scss
@@ -1,27 +1,55 @@
 .using {
   &__body {
-    background: url('../../assets/images/bg/circle-group.svg') no-repeat top right,
-      url('../../assets/images/bg/quarter.svg') no-repeat 46% 100%, $aqua;
+    background: url('../../assets/images/bg/circle-group.svg') no-repeat top right, $aqua;
+    background-size: 40%;
     border-radius: 20px;
     overflow: hidden;
-    padding: 91px 95px;
+    padding: 20px 20px;
     position: relative;
+
+    @media (min-width: 576px) {
+      background-size: 20%;
+    }
+
+    @media (min-width: 992px) {
+      background: url('../../assets/images/bg/circle-group.svg') no-repeat top right,
+        url('../../assets/images/bg/quarter.svg') no-repeat 46% 100%, $aqua;
+      background-size: unset;
+      padding: 91px 95px;
+    }
   }
 
   &__picture {
-    background-color: $white;
-    border-top-right-radius: 21px;
-    bottom: 0;
-    left: 0;
-    padding-right: 25px;
-    padding-top: 25px;
-    position: absolute;
+    display: none;
+
+    @media (min-width: 992px) {
+      background-color: $white;
+      border-top-right-radius: 21px;
+      bottom: 0;
+      display: block;
+      left: 0;
+      max-width: 450px;
+      padding-right: 25px;
+      padding-top: 25px;
+      position: absolute;
+    }
+
+    @media (min-width: 1220px) {
+      max-width: 556px;
+    }
+  }
+
+  &__image {
+    @include image;
   }
 
   &__content {
     color: $white;
-    margin-left: auto;
-    width: 364px;
+
+    @media (min-width: 992px) {
+      margin-left: auto;
+      width: 364px;
+    }
   }
 
   &__title {
@@ -29,27 +57,40 @@
   }
 
   &__action {
-    display: flex;
-    gap: 20px;
     margin-top: 30px;
 
-    & .button {
-      width: 172px;
+    @media (min-width: 992px) {
+      display: flex;
+      gap: 20px;
     }
   }
 
-  &__play-button {
-    padding-left: 29px;
-    padding-right: 29px;
-    white-space: nowrap;
+  &__button {
+    width: 100%;
+
+    & + & {
+      @media (max-width: 991.98px) {
+        margin-top: 10px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      width: 172px;
+    }
+
+    &--play {
+      padding-left: 29px;
+      padding-right: 29px;
+      white-space: nowrap;
+    }
   }
 
-  &__play-icon {
+  &__icon {
     fill: $orange;
     margin-right: 5px;
-    transition: fill $base-duration ease;
+    transition: $base-duration ease;
 
-    .using__play-button:hover & {
+    .using__button--play:hover & {
       fill: $white;
     }
   }
